# what-the-code-doing

./: AGENTS.md  ANRSM_v1_Master_Guide_Combined.md  CLAUDE.md  Cargo.toml  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v0.1.1-MILESTONE-AUDIT.md  v0.1.1-MILESTONE-CLEANUP.md  v0.1.1-MILESTONE-COMPLETE.md  v0.2.0-MILESTONE-AUDIT.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-mirror-fingerprint/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md  02-05-PLAN.md  02-CONTEXT.md  02-SUMMARY.md
.planning/phases/03-drift-gate/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-04-PLAN.md  03-05-PLAN.md  03-06-PLAN.md  03-SUMMARY.md
.planning/phases/04-index-route/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-CONTEXT.md  04-index-route-SUMMARY.md
.planning/phases/05-python-adapter/: 05-01-PLAN.md  05-02-PLAN.md  05-CONTEXT.md  05-SUMMARY.md  05-VERIFICATION.md
.planning/phases/06-go-adapter/: 06-01-PLAN.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-SUMMARY.md  06-VERIFICATION.md
.planning/phases/07-module-aggregation/: 07-01-PLAN.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-SUMMARY.md  07-VERIFICATION.md
.planning/phases/08-knowledge-layer/: 08-01-PLAN.md  08-CONTEXT.md  08-DISCUSSION-LOG.md  08-SUMMARY.md  08-VERIFICATION.md
.planning/phases/09-polyglot-adapter-coverage/: 09-01-PLAN.md  09-CONTEXT.md  09-SUMMARY.md  09-VERIFICATION.md
.planning/phases/10-aggregation-consistency-hardening/: 10-01-PLAN.md  10-CONTEXT.md  10-SUMMARY.md  10-VERIFICATION.md
.planning/phases/11-route-knowledge-signal-quality/: 11-01-PLAN.md  11-CONTEXT.md  11-SUMMARY.md  11-VERIFICATION.md
.planning/phases/12-stability-gates-regression-reliability/: 12-01-PLAN.md  12-CONTEXT.md  12-SUMMARY.md  12-VERIFICATION.md
.planning/phases/999.1-mcp-mcp-cli-agent/: 999.1-01-PLAN.md  999.1-02-PLAN.md  999.1-03-PLAN.md  999.1-CONTEXT.md  999.1-DISCUSSION-LOG.md  999.1-RESEARCH.md  999.1-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  IMPLEMENTATION.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/wtcd-adapters/: Cargo.toml
crates/wtcd-adapters/src/: c.rs  cpp.rs  csharp.rs  dart.rs  go.rs  java.rs  kotlin.rs  lib.rs  py.rs  rust.rs  swift.rs  ts.rs  zig.rs
crates/wtcd-cli/: Cargo.toml
crates/wtcd-cli/src/: main.rs  output.rs
crates/wtcd-cli/src/commands/: check.rs  init.rs  mcp.rs  mcp_install.rs  mod.rs  route.rs  run.rs
crates/wtcd-cli/tests/: integration_init.rs  integration_run.rs
crates/wtcd-cli/tests/fixtures/ts/: named_imports.ts
crates/wtcd-core/: Cargo.toml
crates/wtcd-core/src/: adapter.rs  config.rs  depgraph.rs  error.rs  index.rs  lib.rs  types.rs
crates/wtcd-diff/: Cargo.toml
crates/wtcd-diff/src/: analyzer.rs  classifier.rs  gate.rs  git_diff.rs  lib.rs  types.rs
crates/wtcd-mcp/: Cargo.toml
crates/wtcd-mcp/src/: error.rs  server.rs
crates/wtcd-mcp/src/tools/: check.rs  mirror.rs  mod.rs  parse.rs  run.rs
crates/wtcd-mirror/: Cargo.toml
crates/wtcd-mirror/src/: config.rs  fingerprint.rs  io.rs  knowledge.rs  lib.rs  module.rs  template.rs  types.rs
crates/wtcd-scope/: Cargo.toml
crates/wtcd-scope/src/: lib.rs  scanner.rs  scope.rs
crates/wtcd-tests/: Cargo.toml
crates/wtcd-tests/tests/: integration_drift.rs  integration_go.rs  integration_init.rs  integration_mirror.rs  integration_polyglot.rs  integration_route.rs  integration_run.rs
docs/: 01_ANRSM_v1_Design_Mother_Draft.md  02_Normative_Language_and_Glossary.md  03_System_Boundaries_Assumptions_and_NonGoals.md  04_Architecture_and_Component_Model.md  05_Information_Model_and_Repository_Layout.md  06_Semantic_Mirror_Protocol_and_Header_Spec.md  07_Drift_Detection_Synchronization_and_CI.md  08_Agent_Runtime_Contract_and_Workflows.md  09_Validation_Acceptance_Testing_and_Metrics.md  10_Milestones_Roadmap_and_Delivery_Plan.md  11_AntiPatterns_FailureModes_and_Decision_Record_Guide.md  12_MCP_Server_Contract.md
examples/: anrsm.example.yaml  drift_report_example.json  file_mirror_example.md
schemas/: drift-report.schema.json  mirror-header.schema.json
tests/fixtures/c/: classes.c  complex.c  hello.c  imports.c  syntax_error.c
tests/fixtures/cpp/: classes.cpp  complex.cpp  hello.cpp  imports.cpp
tests/fixtures/csharp/: classes.cs  complex.cs  hello.cs  imports.cs  syntax_error.cs
tests/fixtures/dart/: classes.dart  complex.dart  hello.dart  imports.dart  syntax_error.dart
tests/fixtures/go/: effects.go  sample.go  syntax_error.go
tests/fixtures/java/: classes.java  complex.java  hello.java  imports.java  syntax_error.java
tests/fixtures/js/: basic_exports.js
tests/fixtures/kotlin/: classes.kt  complex.kt  hello.kt  imports.kt  syntax_error.kt
tests/fixtures/python/: classes.py  decorators.py  hello.py  imports.py  syntax_error.py
tests/fixtures/python/init_package/: __init__.py
tests/fixtures/rust/: classes.rs  complex.rs  hello.rs  imports.rs  syntax_error.rs
tests/fixtures/swift/: classes.swift  complex.swift  hello.swift  imports.swift  syntax_error.swift
tests/fixtures/ts/: basic_exports.ts  broken_syntax.ts  function_signatures.ts  side_effects.ts  type_exports.ts
tests/fixtures/zig/: classes.zig  complex.zig  hello.zig  imports.zig  syntax_error.zig
