[workspace]
members = [
    "crates/wtcd-core",
    "crates/wtcd-scope",
    "crates/wtcd-adapters",
    "crates/wtcd-cli",
    "crates/wtcd-tests",
    "crates/wtcd-mirror",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
wtcd-core = { path = "crates/wtcd-core" }
wtcd-scope = { path = "crates/wtcd-scope" }
wtcd-adapters = { path = "crates/wtcd-adapters" }
wtcd-mirror = { path = "crates/wtcd-mirror" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
ignore = "0.4"
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
globset = "0.4"


