[workspace]
members = [
    "crates/wtcd-core",
    "crates/wtcd-scope",
    "crates/wtcd-adapters",
    "crates/wtcd-cli",
    "crates/wtcd-tests",
    "crates/wtcd-mirror",
    "crates/wtcd-diff",
    "crates/wtcd-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
wtcd-core = { path = "crates/wtcd-core" }
wtcd-scope = { path = "crates/wtcd-scope" }
wtcd-adapters = { path = "crates/wtcd-adapters" }
wtcd-mcp = { path = "crates/wtcd-mcp" }
wtcd-mirror = { path = "crates/wtcd-mirror" }
wtcd-diff = { path = "crates/wtcd-diff" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
ignore = "0.4"
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-dart = "0.0"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-rust = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-zig = "1.1"
globset = "0.4"
gix = { version = "0.63", features = ["max-performance-safe"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
