[package]
name = "wtcd-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wtcd-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
anyhow = { workspace = true }
