[package]
name = "wtcd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wtcd"
path = "src/main.rs"

[dependencies]
wtcd-core = { workspace = true }
wtcd-scope = { workspace = true }
wtcd-adapters = { workspace = true }
wtcd-mirror = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
