[package]
name = "wtcd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wtcd"
path = "src/main.rs"

[dependencies]
wtcd-core = { workspace = true }
wtcd-scope = { workspace = true }
wtcd-adapters = { workspace = true }
wtcd-mcp = { workspace = true }
wtcd-mirror = { workspace = true }
wtcd-diff = { workspace = true }
rmcp = { version = "1.2.0", features = ["server", "transport-io"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
