[package]
name = "wtcd-diff"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wtcd-core = { workspace = true }
wtcd-mirror = { workspace = true }
gix = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
