[package]
name = "wtcd-mirror"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wtcd-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
chrono = { workspace = true }
yaml_serde = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
