[package]
name = "wtcd-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
wtcd-core = { workspace = true }
wtcd-adapters = { workspace = true }
wtcd-mirror = { workspace = true }
serde_json = { workspace = true }
yaml_serde = { workspace = true }
tempfile = "3"
